--- a/Monkey Strike Force.cbp
+++ b/Monkey Strike Force.cbp
@@ -32,16 +32,18 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="CircleObject.cpp" />
+		<Unit filename="CircleObject.h" />
 		<Unit filename="ClickableObject.cpp" />
 		<Unit filename="ClickableObject.h" />
 		<Unit filename="DrawableObject.cpp" />
 		<Unit filename="DrawableObject.h" />
 		<Unit filename="Game.cpp" />
 		<Unit filename="Game.h" />
+		<Unit filename="Geometry.cpp" />
+		<Unit filename="Geometry.h" />
 		<Unit filename="GraphicsEngine.cpp" />
 		<Unit filename="GraphicsEngine.h" />
-		<Unit filename="Ground.cpp" />
-		<Unit filename="Ground.h" />
 		<Unit filename="Main.cpp" />
 		<Unit filename="MechanicsEngine.cpp" />
 		<Unit filename="MechanicsEngine.h" />
@@ -66,6 +68,8 @@
 		<Unit filename="SDLMain.h" />
 		<Unit filename="Sling.cpp" />
 		<Unit filename="Sling.h" />
+		<Unit filename="UFObird.cpp" />
+		<Unit filename="UFObird.h" />
 		<Unit filename="Wall.cpp" />
 		<Unit filename="Wall.h" />
 		<Extensions>
